--- a/index.html
+++ b/index.html
@@ -58,8 +58,10 @@
       </div>
     </section>
 
+    <script src="js/app.js"></script>
+
   </main>
-  
+
   <footer class="page__footer">
     <p>&copy Udacity</p>
   </footer>
