--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Manipulating the DOM</title>
   <!-- Load Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans:900|Merriweather&display=swap" rel="stylesheet">  <!-- Load Styles -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="css/styles.css" rel="stylesheet">
 </head>
 
@@ -18,7 +19,12 @@
     <nav class="navbar__menu">
       <!-- Navigation starts as empty UL that will be populated with JS -->
      
-      <ul id="navbar__list">
+      <ul id="navbar__list" class="navbar__list">
+        <li>
+        <a href="javascript:void(0);" class="icon" onclick="responsiveMenu()">
+          <i class="fa fa-bars"></i>
+        </a>
+      </li>
 
       </ul>
     </nav>
